# backend-service/src/routes/user.route.js
@@ -6,11 +6,12 @@ import { registerDefinition } from 'swaggiffy'
 const userRouter = Router()
 
 userRouter.post('/register', userController.registerUser)
+userRouter.post('/add-location', isLoggedIn, userController.addUserLocation)
 userRouter.put('/update', isLoggedIn, userController.updateUser)
 userRouter.put('/update-status', isLoggedIn, userController.updateProfileStatus)
-userRouter.get('/all', isLoggedIn, isAdmin, userController.getAllUsers)
+userRouter.get('/all', [isLoggedIn, isAdmin], userController.getAllUsers)
 userRouter.get('/:id', isLoggedIn, userController.getUserById)
-userRouter.delete('/delete/:id', isLoggedIn, isAdmin, userController.deleteUserByAdmin)
+userRouter.delete('/delete/:id', [isLoggedIn, isAdmin], userController.deleteUserByAdmin)
 userRouter.post('/delete', isLoggedIn, userController.deleteUser)
 userRouter.get("/search/:query", isLoggedIn, userController.searchUser)
 userRouter.post("/update-avatar", isLoggedIn, userController.updateAvatar)
